deploy/z19rpw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: z19rpw
  name: z19rpw
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 12
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: z19rpw
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: z19rpw
    spec:
      containers:
        - env:
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: status.podIP
          image: gcr.io/z19r-com/z19rpw:latest
          imagePullPolicy: Always
          name: z19rpw
          resources:
            requests:
              memory: "300Mi"
              cpu: "500m"
            limits:
              memory: "300Mi"
              cpu: "500m"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            httpGet:
              path: /_status
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 30
        - env:
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: status.podIP
          image: memcached:alpine
          imagePullPolicy: Always
          name: z19rpw-memcached-sidecar
          resources:
            requests:
              memory: "30Mi"
              cpu: "150m"
            limits:
              memory: "30Mi"
              cpu: "150m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
