deploy/headless.yml
apiVersion: v1
kind: Service
metadata:
  name: z19rpw-headless-service
spec:
  ports:
    - port: 8000
  selector:
    app: z19rpw
  clusterIP: None
