deploy/varnish-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: varnish-svc
  namespace: default
spec:
  ports:
    - name: "http"
      port: 80
  selector:
    app: varnish-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish-proxy
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: varnish-proxy
  template:
    metadata:
      name: varnish-proxy
      labels:
        app: varnish-proxy
    spec:
      volumes:
        - name: varnish-config
          configMap:
            name: varnish-vcl
            items:
              - key: default.vcl
                path: default.vcl
        - name: varnish-secret
          secret:
            secretName: varnish-secret
      containers:
        - name: varnish
          image: zackkitzmiller/varnish-arm:alpine
          imagePullPolicy: Always
          volumeMounts:
            - name: varnish-config
              mountPath: /etc/varnish
            - name: varnish-secret
              mountPath: /etc/varnish/k8s-secret
          ports:
            - containerPort: 80
