deploy/z19rpw-ingress-traefik.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: z19rpw-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: z19r.pw
      http:
        paths:
          - path: /
            backend:
              serviceName: varnish-svc
              servicePort: 80
  tls:
    - hosts:
        - z19r.pw
      secretName: z19r-pw-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
    - host: traefik.z19rpw.prod
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-dashboard
              servicePort: dashboard-http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cockroach-web-ui
  namespace: default
spec:
  rules:
    - host: cockroach.z19rpw.prod
      http:
        paths:
          - path: /
            backend:
              serviceName: cockroachdb-public
              servicePort: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tthcp-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: thetrumphealthcareplan.com
      http:
        paths:
          - path: /
            backend:
              serviceName: z19rpw-service
              servicePort: 80
  tls:
    - hosts:
        - thetrumphealthcareplan.com
      secretName: thetrumphealthcareplan-com-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-svc
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: blob.z19r.pw
      http:
        paths:
          - path: /
            backend:
              serviceName: minio-1640209474
              servicePort: 9000
  tls:
    - hosts:
      - blob.z19r.pw
      secretName: blobz-z19r-pw-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cdn
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: contentdeliverynetwork.z19r.pw
      http:
        paths:
          - path: /
            backend:
              serviceName: varnish-svc
              servicePort: 80
  tls:
    - hosts:
      - contentdeliverynetwork.z19r.pw
      secretName: contentdeliverynetwork-z19r-pw-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vaccine-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: shouldigetthecovidvaccine.com
      http:
        paths:
          - path: /
            backend:
              serviceName: varnish-svc
              servicePort: 80
  tls:
    - hosts:
        - shouldigetthecovidvaccine.com
      secretName: shouldigetthecovidvaccine-com-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lolkat-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: lolkat.fyi
      http:
        paths:
          - path: /
            backend:
              serviceName: varnish-svc
              servicePort: 80
  tls:
    - hosts:
        - lolkat.fyi
      secretName: lolkat-fyi-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jordan-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: jordanhuskeynudeleaks.com
      http:
        paths:
          - path: /
            backend:
              serviceName: varnish-svc
              servicePort: 80
  tls:
    - hosts:
        - jordanhuskeynudeleaks.com
      secretName: jordanhuskeynudeleaks-com-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecu-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: willmy062020plusecugotorussia.com
      http:
        paths:
          - path: /
            backend:
              serviceName: varnish-svc
              servicePort: 80
  tls:
    - hosts:
        - willmy062020plusecugotorussia.com
      secretName: willmy062020plusecugotorussia-com-tls
