deploy/z19rpw-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: z19rpw-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: z19rpw-ip-i
    networking.gke.io/managed-certificates: z19rpw-cert
spec:
  backend:
    serviceName: z19rpw-service
    servicePort: 80
