deploy/z19rpw-service-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: z19rpw-service-a
spec:
  selector:
    app: z19rpw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: z19rpw-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: z19rpw-service-a
          servicePort: 80
