deploy/z19rpw-traefik.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: z19rpw-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: z19rpw-service
          servicePort: 80
